log
Sun 16 Oct 2022 10:12:05 PM UTC: 
 tests:  0|4
total_score: 0/70
e567bcf
Sun 16 Oct 2022 10:16:36 PM UTC: 
 heap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:37:62: error: expected ‘;’ before ‘newHeap’
   37 |   newHeap->heapArray = (heapElem *)malloc(3*sizeof(heapElem))
      |                                                              ^
      |                                                              ;
   38 |   newHeap->size = 0;
      |   ~~~~~~~                                                     
heap.c:39:12: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘capacity’; did you mean ‘capac’?
   39 |   newHeap->capacity = 3;
      |            ^~~~~~~~
      |            capac
Compilation failed
e7cf773
Sun 16 Oct 2022 10:16:47 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:37:62: error: expected ‘;’ before ‘newHeap’
   37 |   newHeap->heapArray = (heapElem *)malloc(3*sizeof(heapElem))
      |                                                              ^
      |                                                              ;
   38 |   newHeap->size = 0;
      |   ~~~~~~~                                                     
Compilation failed
a5a1ab1
Sun 16 Oct 2022 10:16:55 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
f774d7c
Sun 16 Oct 2022 10:19:13 PM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
875e625
Sun 16 Oct 2022 10:46:57 PM UTC: 
 heap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:30:50: error: passing argument 1 of ‘realloc’ makes pointer from integer without a cast [-Werror=int-conversion]
   30 |     pq->heapArray = (heapElem *)realloc(pq->capac*sizeof(heapElem));
      |                                         ~~~~~~~~~^~~~~~~~~~~~~~~~~
      |                                                  |
      |                                                  long unsigned int
In file included from test.c:2:
/nix/store/iwd8ic5hhwdxn5dga0im55g5hjl270cd-glibc-2.33-47-dev/include/stdlib.h:550:29: note: expected ‘void *’ but argument is of type ‘long unsigned int’
  550 | extern void *realloc (void *__ptr, size_t __size)
      |                       ~~~~~~^~~~~
In file included from test.c:4:
heap.c:30:33: error: too few arguments to function ‘realloc’
   30 |     pq->heapArray = (heapElem *)realloc(pq->capac*sizeof(heapElem));
      |                                 ^~~~~~~
In file included from test.c:2:
/nix/store/iwd8ic5hhwdxn5dga0im55g5hjl270cd-glibc-2.33-47-dev/include/stdlib.h:550:14: note: declared here
  550 | extern void *realloc (void *__ptr, size_t __size)
      |              ^~~~~~~
In file included from test.c:4:
heap.c:37:20: error: expected ‘;’ before ‘}’ token
   37 |     now = (now-1)/2
      |                    ^
      |                    ;
   38 |   }
      |   ~                 
cc1: all warnings being treated as errors
Compilation failed
a4e5faa
Sun 16 Oct 2022 10:47:20 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:30:41: error: passing argument 1 of ‘realloc’ makes pointer from integer without a cast [-Werror=int-conversion]
   30 |     pq->heapArray = (heapElem *)realloc(sizeof(heapElem));
      |                                         ^~~~~~~~~~~~~~~~
      |                                         |
      |                                         long unsigned int
In file included from test.c:2:
/nix/store/iwd8ic5hhwdxn5dga0im55g5hjl270cd-glibc-2.33-47-dev/include/stdlib.h:550:29: note: expected ‘void *’ but argument is of type ‘long unsigned int’
  550 | extern void *realloc (void *__ptr, size_t __size)
      |                       ~~~~~~^~~~~
In file included from test.c:4:
heap.c:30:33: error: too few arguments to function ‘realloc’
   30 |     pq->heapArray = (heapElem *)realloc(sizeof(heapElem));
      |                                 ^~~~~~~
In file included from test.c:2:
/nix/store/iwd8ic5hhwdxn5dga0im55g5hjl270cd-glibc-2.33-47-dev/include/stdlib.h:550:14: note: declared here
  550 | extern void *realloc (void *__ptr, size_t __size)
      |              ^~~~~~~
In file included from test.c:4:
heap.c:37:20: error: expected ‘;’ before ‘}’ token
   37 |     now = (now-1)/2
      |                    ^
      |                    ;
   38 |   }
      |   ~                 
cc1: all warnings being treated as errors
Compilation failed
4292f52
